blocks/cards/cards.css
.cards .cards-card-body {
  margin: 16px;
}

.cards .cards-card-image {
  line-height: 0;
}

.cards .cards-card-body > *:first-child {
  margin-top: 0;
}

.cards {
  --offset-left: 20px;
}

.cards > ul {
  list-style: none;
  margin: 0;                    
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  display: block;
  padding-inline-start: 0;
  min-height: 100vh;
}

.cards > ul > li {     
  background-color: var(--background-color);
  border: 1px solid var(--color-blue-light);
  border-radius: 6px;
  padding: 0;
  margin-bottom: 1.5rem;    
}

.cards .blogs-card-body {
  padding: 1.5rem;
  display: flex;    
  flex-direction: column;    
  justify-content: space-between;    
  background-color: transparent;
} 

.cards .blogs-card-image {
  line-height: 0;
  position: relative;
  display: block;
    
}
  
.cards > ul > li img {
  width: 100%;
  aspect-ratio: 4 / 3;
  object-fit: cover;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.cards .blogs-card-body > h3{
  font-size: var(--body-font-size-l);
  margin-bottom: 10px;    
  font-family: var(--heading-font-family);    
  color: var(--text-color);
}

.cards .blogs-card-body >span{
  font-size: var(--body-font-size-s);
}

.cards .blogs-card-category{
  --bg-color: inherit;
  --border-color: inherit;    
  
  font-family: var(--heading-font-family);    
  position: absolute;
  line-height: 1.7;
  inset: 10px auto auto 20px;
  border-radius: 14px;
  display: inline-block;
  padding: 0 14px;
  background: var(--bg-color);
  border: 1px solid var(--border-color);
  color: var(--text-color-inverted);
  max-width: calc(100% - 2 * var(--offset-left));
  box-sizing: border-box; 
}

.cards .blogs-card-body .card-date{
  color: var(--text-color);
}

@media (min-width: 900px) {
  .cards > ul {      
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 24px;   
    margin-bottom: 1rem;    
    min-height: 0;         
  } 

  .cards.search > ul {
    grid-template-columns: repeat(4, 1fr);
  }
  
  .cards.search > ul > li img {
    min-height: 320px;
  }

  .cards.search .blogs-card-body {
    min-height: 200px;
  } 
}

/* Skeleton loading styles */
.cards .skeleton {
  min-height: 393px;
  background-image:
    radial-gradient(circle 16px, white 99%, transparent 0),
    radial-gradient(circle 16px, white 99%, transparent 0),
    linear-gradient(var(--background-color) 32px, transparent 0),
    linear-gradient(var(--color-gray-light-alt) 231px, transparent 0),
    linear-gradient(var(--color-gray-light-alt) 20px, transparent 0),
    linear-gradient(var(--color-gray-light-alt) 20px, transparent 0),
    linear-gradient(var(--color-gray-light-alt) 50px, transparent 0),
    linear-gradient(var(--color-gray-light-alt) 50px, transparent 0);
  background-size:
    32px 32px,
    32px 32px,
    100px 32px,
    100% 231px,
    calc(100% - 2*24px) 20px,
    calc(100% - 2*24px) 20px,
    calc(100% - 4*24px) 20px,
    calc(100% - 4*24px) 20px;
  background-position:
    20px 10px,
    120px 10px,
    36px 10px,
    0 0,
    24px 255px,
    24px 280px,
    24px 320px,
    24px 345px;
}

